Add issue #229 Add names of downloaded files to metadata
- Tumblr SVC data structure adjustments
- filling new metadata objects
- add downloaded files' names to metadata object

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.ar.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.ar.resx
@@ -145,7 +145,7 @@
     <value>بمجرد الانتهاء</value>
   </data>
   <data name="Body" xml:space="preserve">
-    <value>الجسم: {0]</value>
+    <value>الجسم: {0}</value>
   </data>
   <data name="Conversation" xml:space="preserve">
     <value>المحادثة: {0}</value>
