--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.no.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.no.resx
@@ -145,7 +145,7 @@
     <value>En gang ferdig</value>
   </data>
   <data name="Body" xml:space="preserve">
-    <value>Kropp: {0]</value>
+    <value>Kropp: {0}</value>
   </data>
   <data name="Conversation" xml:space="preserve">
     <value>Samtale: {0}</value>
