--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.sv.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.sv.resx
@@ -145,7 +145,7 @@
     <value>En gång färdig</value>
   </data>
   <data name="Body" xml:space="preserve">
-    <value>Kropp: {0]</value>
+    <value>Kropp: {0}</value>
   </data>
   <data name="Conversation" xml:space="preserve">
     <value>Samtal: {0}</value>
