--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.tr.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.tr.resx
@@ -145,7 +145,7 @@
     <value>Bittiğinde</value>
   </data>
   <data name="Body" xml:space="preserve">
-    <value>Beden: {0]</value>
+    <value>Beden: {0}</value>
   </data>
   <data name="Conversation" xml:space="preserve">
     <value>Konuşma: {0}</value>
