Change the crawl button icon from 'search' to 'download' and change caption too

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ar.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ar.resx
@@ -138,8 +138,8 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>تحقق الحافظة</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
-    <value>زحف</value>
+  <data name="Download" xml:space="preserve">
+    <value>جارى التحميل</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
     <value>تحديد الزحف</value>
