--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
@@ -138,7 +138,7 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>Vérifier le presse-papier</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
+  <data name="Download" xml:space="preserve">
     <value>Télécharger</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
