--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ja.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ja.resx
@@ -138,8 +138,8 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>クリップボードを確認する</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
-    <value>クロール</value>
+  <data name="Download" xml:space="preserve">
+    <value>ダウンロード</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
     <value>クロールの選択</value>
