--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
@@ -138,8 +138,8 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>Sjekk utklippstavlen</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
-    <value>Crawl</value>
+  <data name="Download" xml:space="preserve">
+    <value>Last</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
     <value>Gjennomsøkingsvalg</value>
