--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.pl.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.pl.resx
@@ -138,8 +138,8 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>Sprawdź schowek</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
-    <value>Czołgać się</value>
+  <data name="Download" xml:space="preserve">
+    <value>Ściągnij</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
     <value>Wybór indeksowania</value>
