--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.vi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.vi.resx
@@ -138,8 +138,8 @@
   <data name="ClipboardMonitor" xml:space="preserve">
     <value>Kiểm tra Clipboard</value>
   </data>
-  <data name="Crawl" xml:space="preserve">
-    <value>Thu thập thông tin</value>
+  <data name="Download" xml:space="preserve">
+    <value>Tải xuống</value>
   </data>
   <data name="CrawlSelection" xml:space="preserve">
     <value>Thu thập thông tin</value>
