--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -769,7 +769,7 @@ E.g.  great big car, bears searches for great big cars and bears.</value>
     <value>During an active crawl each file is checked globally if it already exists instead of blog wise.</value>
   </data>
   <data name="ToolTipLoadAllDatabasesDescription" xml:space="preserve">
-    <value>When crawling a blog, all posts are compared against each other before downloading to prevent the download of duplicate binary files.
+    <value>When checking a blog, all posts are compared against each other before downloading to prevent the download of duplicate binary files.
 This is done blog wise. Enabling this options will compare each file globally.
 Activation will increase the memory usage during operation based on the amount of already downloaded content.</value>
   </data>
