--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -465,4 +465,10 @@ version of TumblThree now?</value>
 It is the best option to move the TumblrThree program folder to another location.
 Else you should change at least the "Download" and "Export Blogs" location entries on the "General" tab in the Settings.</value>
   </data>
+  <data name="ErrorShowingBlogFiles" xml:space="preserve">
+    <value>{0}: Error opening folder!</value>
+  </data>
+  <data name="ErrorOpeningBlogUrl" xml:space="preserve">
+    <value>{0}: Error opening blog url!</value>
+  </data>
 </root>
