Refactor issue #135 Change translations of columns in the blog list
- To make the meaning more clear the translations for the numbers of already downloaded and total items have been changed.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -909,4 +909,10 @@ durch {Post id}_{Bildindex} ersetzt, oder wenn das Token nicht verwendet wird, w
 Bildsätze als {Post id}_{Bildindex}_{Dateinamenvorlage} gespeichert.
 Deaktivieren Sie die Option, wenn Sie Ihre eigene Vorlage für Fotosets verwenden möchten.</value>
   </data>
+  <data name="DownloadedItems" xml:space="preserve">
+    <value>Elemente heruntergeladen</value>
+  </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>Anzahl herunterladbarer Elemente</value>
+  </data>
 </root>
