--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
@@ -707,4 +707,7 @@
   <data name="ToolTipLogLevelDescription" xml:space="preserve">
     <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
   </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>डाउनलोड करने योग्य वस्तुओं की संख्या</value>
+  </data>
 </root>
