--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
@@ -706,4 +706,7 @@
   <data name="ToolTipLogLevelDescription" xml:space="preserve">
     <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
   </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>다운로드 가능한 항목 수</value>
+  </data>
 </root>
