--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
@@ -711,4 +711,7 @@ Boş, blogun tamamı anlamına gelir.</value>
   <data name="ToolTipLogLevelDescription" xml:space="preserve">
     <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
   </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>İndirilebilir Öğe Sayısı</value>
+  </data>
 </root>
