--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
@@ -906,4 +906,10 @@ Puede mover los archivos multimedia antiguos manualmente, si es necesario.</valu
   <data name="ToolTipDownloadVideoThumbnailsDescription" xml:space="preserve">
     <value>Descarga miniaturas de video disponibles. Esta configuración es independiente de 'Descargar imágenes' y 'Descargar videos'.</value>
   </data>
+  <data name="DownloadedItems" xml:space="preserve">
+    <value>Elementos descargados</value>
+  </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>Número de elementos descargables</value>
+  </data>
 </root>
