--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fa.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fa.resx
@@ -713,4 +713,7 @@
   <data name="ToolTipLogLevelDescription" xml:space="preserve">
     <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
   </data>
+  <data name="NumberOfDownloadableItems" xml:space="preserve">
+    <value>تعداد آیتم های قابل دانلود</value>
+  </data>
 </root>
