Add issue #135 New column showing number of newly downloaded items since last run
- Sometimes it's interesting to know how many items have been downloaded on the last run.
- A new column is added to the blog list for showing that number. The number is reset on every run and not persisted across sessions.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -912,6 +912,9 @@ Deaktivieren Sie die Option, wenn Sie Ihre eigene Vorlage für Fotosets verwende
   <data name="DownloadedItems" xml:space="preserve">
     <value>Elemente heruntergeladen</value>
   </data>
+  <data name="DownloadedItemsNew" xml:space="preserve">
+    <value>Neu heruntergeladene Elemente</value>
+  </data>
   <data name="NumberOfDownloadableItems" xml:space="preserve">
     <value>Anzahl herunterladbarer Elemente</value>
   </data>
