--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1142,6 +1142,9 @@ old media files manually, if necessary.</value>
   <data name="DownloadedItems" xml:space="preserve">
     <value>Downloaded Items</value>
   </data>
+  <data name="DownloadedItemsNew" xml:space="preserve">
+    <value>Newly downloaded items</value>
+  </data>
   <data name="NumberOfDownloadableItems" xml:space="preserve">
     <value>Number of downloadable Items</value>
   </data>
